fixed layout issue on video section

--- a/styles.css
+++ b/styles.css
@@ -1203,6 +1203,7 @@ audio {
 #video-overview video {
   width: 100%;
   max-width: 1100px;
+  margin: auto;
 }
 
 .bgnd-bluegray {
